@@ -1,5 +1,7 @@
 2012-08-14  Philippe Brochard  <pbrochard@common-lisp.net>
 
+	* contrib/toolbar.lisp: Add arguments in toolbar modules.
+
 	* src/xlib-util.lisp (event-hook-name): Intern hook name symbole
 	in :clfswm package.
 
